# TriangularArbitrageSim

./: .dockerIgnore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Dockerfile  LICENSE  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_test_coverage.yml
analysis/: requirements.txt
analysis/resources/: example_trade_data.parquet  example_trade_data.txt
analysis/src/: convert_to_parquet.py  gather_data.py  main.py  test.py  visualise_data.py
scripts/: runBtcUsdtEthBtcBot.sh  runUsdtBtcLtcUsdtBot.sh  runUsdtBtcSolUsdtBot.sh  runUsdtBtcXrpUsdtBot.sh  run_triangular_arbitrage_bot.sh  triangular_arbitrage_bot.sh
src/: main.cpp
src/client/: market_data_client.cpp  market_data_client.h
src/common/: arbitrage_result.h  common.cpp  common.h  order_book.cpp  order_book.h  trade_leg.h  trade_util.cpp  trade_util.h
src/exchange/abstract/: market_data_client.h
src/exchange/binance/: binance_client.cpp  binance_client.h  example_binance_data.json
src/file/: trade_file_writer.cpp  trade_file_writer.h
src/server/: arbitrage_calculator.cpp  arbitrage_calculator.h  arbitrage_server.cpp  arbitrage_server.h  arbitrage_session.cpp  arbitrage_session.h
src/websocket/: websocket.cpp
test/: test.cpp  test_arbitrage_calculator.cpp  test_trade_leg.cpp
